syntax = "proto3";
package api;

import "register.proto";

message LoginReq{
    string device = 1;
}


service Login {
    rpc Authenticate(LoginReq) returns (Empty);
} 
